--- a/allauth/templates/account/login.html
+++ b/allauth/templates/account/login.html
@@ -1,19 +1,30 @@
-{% extends "site_base.html" %}
-
 {% load i18n %}
 {% load uni_form_tags %}
 {% load account_tags %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-
-{% block body %}
-    
     <h1>{% trans "Sign In" %}</h1>
 
     {% if not user.is_authenticated %}
         {% url account_signup as signup_url %}
         {% url socialaccount_login as social_login_url %}
         <p>{% blocktrans %}No account? <a href="{{ signup_url }}">Sign up</a> for an new account, or sign in using an existing <a href="{{social_login_url }}">3rd party account</a>.{% endblocktrans %}</p>
+    
+        <p>Sign in using your account with:</p>
+
+        <ul class="socialaccount_providers">
+        <li><a class="socialaccount_provider local" title="{{site}}" href="{% url account_login %}">{{site.name}}</a></li>
+        {% include "socialaccount/snippets/provider_list.html" %}
+        </ul>
+
+        {% include "socialaccount/snippets/login_extra.html" %}
+
+        {% if user.is_authenticated %}
+                {% user_display user as user_display %}
+                <p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already signed in as {{ user_display }}.{% endblocktrans %}</p>
+        {% else  %}
+                {% url account_signup as signup_url %}
+                <p>{% blocktrans %}Otherwise, <a href="{{ signup_url }}">sign up</a> for a new account.{% endblocktrans %}</p>
+        {% endif %}
     {% endif %}
 
     <form class="login uniForm" method="POST" action="{% url account_login %}">
@@ -34,7 +45,3 @@
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-
-{% endblock %}
-
